fix buttons overflow, add loader for video

--- a/src/components/Video/styles.module.scss
+++ b/src/components/Video/styles.module.scss
@@ -9,6 +9,17 @@
     margin-bottom: 18px;
   }
 
+  & > .loading {
+    width: 100%;
+    height: 100px;
+
+    color: $primaryColor;
+    font-weight: bold;
+
+    text-align: center;
+    align-self: center;
+  }
+
   & > .video {
     width: 100%;
     max-height: 540px;
@@ -17,11 +28,11 @@
     border-radius: 10px;
 
     @media (min-height: 640px) and (max-height: 840px) {
-      max-height: 360px;
+      max-height: 280px;
     }
 
     @media (min-height: 841px) and (max-height: 890px) {
-      max-height: 480px;
+      max-height: 400px;
     }
   }
 
