--- a/src/routes/Home/styles.module.scss
+++ b/src/routes/Home/styles.module.scss
@@ -60,15 +60,15 @@
     z-index: -1;
 
     @media (max-height: 840px) {
-      top: 500px;
+      top: 420px;
     }
 
     @media (min-height: 841px) and (max-height: 890px) {
-      top: 640px;
+      top: 540px;
     }
 
     @media (min-height: 891px) {
-      top: 680px;
+      top: 580px;
     }
   }
 }
